Slight product card spacing fix

--- a/resources/css/products.less
+++ b/resources/css/products.less
@@ -21,7 +21,7 @@ html{
 }
 
 .showcase-message {
-    padding: 0px 100px;
+    padding: 0px 0px 10px 100px;
     @media(max-width: 600px){
         padding: 0px 35px;
     }
@@ -47,14 +47,14 @@ html{
         align-items: center;
         max-height: 270px;
         justify-content: center;
-
-        .product-image {
-            max-width: 100%;
-    
-            max-height: 270px;
-        }
+        margin-bottom: 20px;
     }
     
+    .product-image {
+        max-width: 100%;
+
+        max-height: 270px;
+    }
 
     .product-name {
         font-family: 'Poppins', sans-serif;
